Avereging for the las frames method added

--- a/README.ipynb
+++ b/README.ipynb
@@ -4,10 +4,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "If you read in an image using matplotlib.image.imread() you will get an RGB image, but if you read it in using OpenCV cv2.imread() this will give you a BGR image. \n",
+    "## Advanced Lane Finding \n",
     "\n",
-    "hls = cv2.cvtColor(im, cv2.COLOR_RGB2HLS) \n",
-    "\n"
+    "The goals of this project is find road lane lines in a video stream and overlay the lines with a computed polynomial curve. \n",
+    "In order to achieve this goal, methods and classes were built to do the following:\n",
+    "\n",
+    "Compute the camera calibration matrix and distortion coefficients given a set of chessboard images.\n",
+    "Apply a distortion correction to raw images.\n",
+    "Use color transforms, gradients (Sobel), to create a thresholded binary image.\n",
+    "Apply a perspective transform to rectify binary image (\"birds-eye view\").\n",
+    "Detect lane pixels and fit to find the lane boundary.\n",
+    "Determine the curvature of the lane and vehicle position with respect to center.\n",
+    "Warp the detected lane boundaries back onto the original image.\n",
+    "Output visual display of the lane boundaries and numerical estimation of lane curvature and vehicle position.\n",
+    "\n",
+    "This jupyter notebook breaks down all the steps and display the output from each step. There is a separate pipeline written in notebook that combines all the steps with the same configuration and applies averaging techniques for the test video."
    ]
   },
   {
@@ -35,7 +46,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Perform camera calibration \n"
+    "## Perform camera calibration \n",
+    "\n",
+    "Camera caliberation is performed in order to correct the deformation in the images that is caused to the optic lense curveture. The first step is to print a chessboard and take random pictures of it. Then count the chess intersecting squres to provide \"objp\" which holds the (x,y,z) coordinates of these corners. Z=0 here and the object points are the same for all images in the calibiration folder. The objpoints will be appended in \"objp\"  every time the method successfully detect all chessboard corners in a test image. \"imgpoints\" will be appended with the (x, y) pixel position of each of the corners in the image plane with each successful chessboard detection.\n",
+    "\n",
+    "I then used the output objpoints and imgpoints to compute the camera calibration and distortion coefficients using the cv2.calibrateCamera() function. I applied this distortion correction to the test image using the cv2.undistort() function and obtained this result:\n"
    ]
   },
   {
@@ -47,7 +62,7 @@
    "outputs": [],
    "source": [
     "\n",
-    "# prepare object points, like (0,0,0), (1,0,0), (2,0,0) ....,(6,5,0)\n",
+    "# prepare object points. The number of corners are 6x9\n",
     "objp = np.zeros((6*9,3), np.float32)\n",
     "objp[:,:2] = np.mgrid[0:9, 0:6].T.reshape(-1,2)\n",
     "\n",
